src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>