src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Additional_Terms_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Terms (Y/N)</label>
    <type>Checkbox</type>
</CustomField>