src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>Ironclad Contracts</relationshipLabel>
    <relationshipName>Ironclad_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>