src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Bison_Trails_Entity__c.field-meta.xml
<CustomField>
    <fullName>Bison_Trails_Entity__c</fullName>
    <label>Bison Trails Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>