src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Counterparty_Publicity_Consent__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Publicity_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counterparty Publicity Consent</label>
    <type>Checkbox</type>
</CustomField>