src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Counterparty_Type__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Type__c</fullName>
    <label>Counterparty Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>