src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Exclusivity_Consent__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusivity Consent</label>
    <type>Checkbox</type>
</CustomField>