src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Fee_Increase__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase__c</fullName>
    <label>Fee Increase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>