src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Fee_Increase_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase_Notice_Period__c</fullName>
    <label>Fee Increase Notice Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>