src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Fixed_Fee_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Grand_Total__c</fullName>
    <label>Fixed Fee Grand Total / Payment Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>