src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Limitation_of_Liability_Cap__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_Liability_Cap__c</fullName>
    <label>Limitation of Liability Cap</label>
    <length>100</length>
    <type>Text</type>
</CustomField>