src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ironclad Contracts</relationshipLabel>
    <relationshipName>Ironclad_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>