src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>