src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Order_Schedule_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Schedule_Number__c</fullName>
    <label>Order Schedule Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>