src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Services_and_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>Services_and_Service_Fees__c</fullName>
    <label>Services and Service Fees</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>