src/baseUnpackaged/objects/ironclad__Ironclad_Contract__c/fields/Slashing_Insurance_Covered_Networks__c.field-meta.xml
<CustomField>
    <fullName>Slashing_Insurance_Covered_Networks__c</fullName>
    <label>Slashing Insurance Covered Networks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>